--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/ashryanbeats/commit-getter#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "octokit": "^1.8.1"
   }
 }
