--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/ashryanbeats/commit-getter#readme",
   "dependencies": {
     "@notionhq/client": "^1.0.4",
+    "async-sema": "^3.1.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "octokit": "^1.8.1"
